a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Michael_Ho/invalid4.min
# String concatenation op with float and int

var a : string;

a = 5.0 + 3 + " numbers";

